# hackRF_python

./: CITATION.cff  README.md
.github/workflows/: release.yml
docs/: project_summary.md
hackrfpy/: README.md  oldREADME.md  oldSUMMARY.md  pyproject.toml
hackrfpy/examples/: benchmark.py  calibrate.py  capture_to_file.py  collect_sample_data.py  device_explorer.py  persistent_capture.py  power_meter.py  scan_then_capture.py  sweep_collect.py  waterfall_persistent.py  waterfall_realtime.py
hackrfpy/examples/sample_data/: README.md  fm_2Msps.iq  fm_2Msps.sigmf-meta  fm_sweep.csv
hackrfpy/src/hackrfpy/: __init__.py  _receiver.py  _stream_ctx.py  cli.py  comparison.md  constants.py  core.py  exceptions.py  presets.py  sigmf.py
hackrfpy/src/hackrfpy/_commands/: capture.py  device.py  info.py  sweep.py  transmit.py
hackrfpy/tests/: collect_real_data.py  conftest.py  test_bugfixes.py  test_calibration.py  test_cli_dryrun.py  test_compat.py  test_detect.py  test_examples.py  test_features.py  test_hardware.py  test_lifecycle_xplat.py  test_metadata.py  test_monitor.py  test_parsing.py  test_real_output.py  test_realtime.py  test_receiver.py  test_resolve.py  test_safety.py  test_validation.py
hackrfpy/tests/fixtures/: REAL_DATA_PROVENANCE.txt  device_queries_real.txt  hackrf_info.txt  hackrf_info_multi.txt  hackrf_info_real.txt  sample_real.iq  sweep_sample.csv  sweep_sample_real.csv
hackrfpy/tests/fixtures/old_data/: REAL_DATA_PROVENANCE.txt  device_queries_real.txt  sample.iq  sample_real.iq  sweep_sample.csv
