[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackrfpy"
version = "0.1.0"
description = "A self-contained CLI + scriptable wrapper for the HackRF One, built on the hackrf-tools binaries (no libhackrf bindings required)."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
authors = [{ name = "LC-Linkous" }]
keywords = ["hackrf", "sdr", "rf", "spectrum", "sigmf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# plotting deps for the examples (NOT needed by the library itself).
# matplotlib alone is enough -- it uses a native GUI backend (TkAgg on
# Windows, ships with Python) for the live windows. PyQt5 was dropped: its
# wheels don't resolve cleanly on Windows via uv and it isn't required.
plotting = ["matplotlib"]

[project.scripts]
hrf = "hackrfpy.cli:main"

[project.urls]
Homepage = "https://github.com/LC-Linkous/hackrfpy"
Repository = "https://github.com/LC-Linkous/hackrfpy"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hackrfpy"]

[tool.pytest.ini_options]
markers = [
    "hardware: tests that require a connected HackRF (self-skip if absent)",
]
testpaths = ["tests"]