[project]
name = "hackrfpy"
version = "1.0.0"
description = "A self-contained CLI + scriptable wrapper for the HackRF One, built on the hackrf-tools binaries (no libhackrf bindings required)."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
license-files = ["LICENSE*"]
authors = [{ name = "LC-Linkous" }]
keywords = ["hackrf", "sdr", "rf", "spectrum", "sigmf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# plotting deps for the examples (NOT needed by the library itself).
# matplotlib alone is enough -- it uses a native GUI backend (TkAgg on
# Windows, ships with Python) for the live windows. PyQt5 was dropped: its
# wheels don't resolve cleanly on Windows via uv and it isn't required.
plotting = ["matplotlib"]

[project.scripts]
hrf = "hackrfpy.cli:main"

[project.urls]
Homepage = "https://github.com/LC-Linkous/hackRF_python"
Repository = "https://github.com/LC-Linkous/hackRF_python"
Issues = "https://github.com/LC-Linkous/hackRF_python/issues"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
markers = [
    "hardware: tests that require a connected HackRF (self-skip if absent)",
]
testpaths = ["tests"]